Delta Dental - Senior Software Engineer - UI/UX. Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Hambu... | JOIN. Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Stutt... | JOIN. Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Kempe... | JOIN. Application Developer - Cupid - Jobs@UIOWA Careers. Clinical/HC Research Associate - Jobs@UIOWA Careers. Job Search Results - Jobs@UIOWA Careers. Job Search Results - Jobs@UIOWA Careers. Job Search Results - Jobs@UIOWA Careers. Nursing Practice Leader - Nursing Education - Jobs@UIOWA Careers. Job @ NIST (Berlin): Internship UI/UX | JOIN. Ingram Micro Careers - Manager, UX/UI Design. Farfetch Careers - Senior UI/UX Product Designer. Job @ Enterprise Bot (Bengaluru): UI Developer - H... | JOIN. UX/UI Designer - Codal - Career Page. Senior UX/UI Designer - Codal - Career Page. SafeAuto - UI Solution Architect. UI Designer 2 | Current Opportunities. Futrli - Jobs: Lead UI Engineer - Apply online. Netflix - Senior UI Engineer - Netflix Logging and Analytics Platform. Identity and Access Management Developer - Jobs@UIOWA Careers. Job Application for UI / Full Stack / Sr. Software Engineer  at hc1.com. Ubisoft UI Artist | SmartRecruiters. Intouch Group - ASSOCIATE TALENT ACQUISITION MANAGER. PA/ARNP Hospitalist - Jobs@UIOWA Careers. Clinical Technician I - Jobs@UIOWA Careers. Staff Nurse - 2nd Shift - Jobs@UIOWA Careers. Job Search Results - Jobs@UIOWA Careers. Job Search Results - Jobs@UIOWA Careers. Job Search Results - Jobs@UIOWA Careers. Job Search Results - Jobs@UIOWA Careers. Job Search Results - Jobs@UIOWA Careers. Job Search Results - Jobs@UIOWA Careers. Job Search Results - Jobs@UIOWA Careers. Job Search Results - Jobs@UIOWA Careers. Job Search Results - Jobs@UIOWA Careers. Job Search Results - Jobs@UIOWA Careers. Staff Nurse - Stead Family Operating Room 90% - Jobs@UIOWA Careers. Senior Accountant - Microbiology and Immunology - Jobs@UIOWA Careers. Staff Nurse - Stead Family Children's Hospital L11 - Jobs@UIOWA Careers. Support Serv

--- a/ui.html
+++ b/ui.html
@@ -40,28 +40,44 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/application-developer-cupid-4361'>Application Developer - Cupid - Jobs@UIOWA Careers</a></h5> 
+<h5><a href='https://jobs.lever.co/deltadental/b5acfab8-0099-4f05-9762-ff219fb2516a'>Delta Dental - Senior Software Engineer - UI/UX</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://ah-recruitment.join.com/jobs/268714-verification-manager-m-f-d'>Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Hambu... | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://ah-recruitment.join.com/jobs/272615-consultant-senior-consultant-m-w-d-automotive'>Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Stutt... | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://ah-recruitment.join.com/jobs/269668-commercial-and-business-development-director-m-w-d'>Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Kempe... | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://uiowa.referrals.selectminds.com/jobs/application-developer-cupid-4361'>Application Developer - Cupid - Jobs@UIOWA Careers</a></h5> 
+<p><span class="badge badge-light">Iowa City, Iowa, United States</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://uiowa.referrals.selectminds.com/jobs/clinical-hc-research-associate-4363'>Clinical/HC Research Associate - Jobs@UIOWA Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Iowa City, Iowa, United States</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://uiowa.referrals.selectminds.com/jobs/4361/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Iowa City, Iowa, United States</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://uiowa.referrals.selectminds.com/jobs/4362/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Iowa City, Iowa, United States</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://uiowa.referrals.selectminds.com/jobs/4363/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Iowa City, Iowa, United States</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://uiowa.referrals.selectminds.com/jobs/nursing-practice-leader-nursing-education-4362'>Nursing Practice Leader - Nursing Education - Jobs@UIOWA Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Iowa City, Iowa, United States</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://nist.join.com/jobs/262433-internship-ui-ux'>Job @ NIST (Berlin): Internship UI/UX | JOIN</a></h5> 
@@ -80,7 +96,7 @@
 <p><span class="badge badge-light">Bengaluru, India</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://codal.applytojob.com/apply/KsWDxAlLUp/UXUI-Designer'>UX/UI Designer - Codal - Career Page</a></h5> 
+<h5><a href='http://codal.applytojob.com/apply/KsWDxAlLUp/UXUI-Designer'>UX/UI Designer - Codal - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -122,7 +138,7 @@ involve?...</p>
 <p><span class="badge badge-light">Overland Park, KS</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/pa-arnp-hospitalist-4360'>PA/ARNP Hospitalist - Jobs@UIOWA Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/pa-arnp-hospitalist-4360'>PA/ARNP Hospitalist - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">Iowa City, Iowa, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -228,7 +244,7 @@ objectively measure impact and optimize engineering processes; Meeting?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999692351755-ui-programmers-based-in-singapore-'>Ubisoft UI Programmers (based in Singapore) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999692351755-ui-programmers-based-in-singapore-'>Ubisoft UI Programmers (based in Singapore) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -236,7 +252,7 @@ objectively measure impact and optimize engineering processes; Meeting?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://colorfy.join.com/jobs/271094-ux-ui-designer-f-m'>Job @ colorfy (Berlin): UX/ UI Designer (f/m/*) | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://colorfy.join.com/jobs/271094-ux-ui-designer-f-m'>Job @ colorfy (Berlin): UX/ UI Designer (f/m/*) | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -312,7 +328,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light">Shanghai</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/servian/cf176827-3d56-4548-a615-174d7278ffed'>Servian - UX/UI Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/servian/cf176827-3d56-4548-a615-174d7278ffed'>Servian - UX/UI Designer</a></h5> 
 <p><span class="badge badge-light">Sydney Sydney</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -338,7 +354,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://itech.applytojob.com/apply/uhgebwYFSd/UXUI-Designer'>UX/UI Designer - iTech Media - Career Page</a></h5> 
+<h5><a href='http://itech.applytojob.com/apply/uhgebwYFSd/UXUI-Designer'>UX/UI Designer - iTech Media - Career Page</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -386,7 +402,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://ah-recruitment.join.com/jobs/258391-general-counsel-m-w-d'>Job @ Althen Hensel - RECRUITMENT SOLUTIONS (L?den... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ah-recruitment.join.com/jobs/258391-general-counsel-m-w-d'>Job @ Althen Hensel - RECRUITMENT SOLUTIONS (L?den... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -431,22 +447,6 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p>Posted on: 2019-07-24</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/wehkamp/743999689148616-digital-designer-ux-ui-brand-'>wehkamp Digital Designer (UX/UI, Brand) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oHrY9fwZ&__jvst=Employee+Referral&__jvsd=sKAQ8gw3&__jvsc=Twitter&bid=nN2wSKws'>ServiceNow Careers - Senior Software UI Developer</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-07-24</p>
-<hr/>
-<h5><a href='http://optelgroup.applytojob.com/apply/9myQ285Sv2/Designer-UXUI'>Designer UX/UI - Optel Group - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qKr9VfwZ&k=Job&j=oF8G9fwm&__jvst=ER+-+Employee+Referral&__jvsd=sTJmRhwB&__jvsc=Twitter&bid=nLXvSKwk'>Nutanix Careers - Member of Technical Staff (UI-BEAM)</a></h5> 
-<p><span class="badge badge-light">Bangalore</span></p>
-<p>Posted on:: 2019-07-24</p>
-<hr/>
-<h5><a href='https://ta-digital.workable.com/j/95DA6ED542'>TA Digital - Jobs: UI Architect - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
