--- a/internship.html
+++ b/internship.html
@@ -41,6 +41,12 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://sandemansneweurope.recruitee.com/o/business-development-internship-map-advertising'>
+      Business Development Internship (Map Advertising) - SANDEMANs NEW Europe 
+    </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/GSOFT1/743999692302895-responsable-des-communications-internes'>GSOFT Responsable des communications internes | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
@@ -199,7 +205,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://unitednationsfoundation.applytojob.com/apply/YyGiMxqInq/Intern-Human-Rights-Policy-New-York'>Intern, Human Rights Policy (New York) - United Nations Foundation - Career Page</a></h5> 
+<h5><a href='http://unitednationsfoundation.applytojob.com/apply/YyGiMxqInq/Intern-Human-Rights-Policy-New-York'>Intern, Human Rights Policy (New York) - United Nations Foundation - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -259,11 +265,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of Java Software Engineer - Internship at Pagantis.</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/astorian/9d9c9363-513f-4abf-b3a8-d049309fa36d'>Astorian - Fall Semester Growth Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/astorian/9d9c9363-513f-4abf-b3a8-d049309fa36d'>Astorian - Fall Semester Growth Intern</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bookingkit.join.com/jobs/270974-internship-business-development-m-f-d'>Job @ bookingkit (Berlin): Internship Business Dev... | JOIN</a></h5> 
+<h5><a href='https://bookingkit.join.com/jobs/270974-internship-business-development-m-f-d'>Job @ bookingkit (Berlin): Internship Business Dev... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -291,7 +297,7 @@
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://luxasia.workable.com/j/D0216D477A'>Luxasia - Jobs: Business Project Intern - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://luxasia.workable.com/j/D0216D477A'>Luxasia - Jobs: Business Project Intern - Apply online</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -364,7 +370,7 @@ will be providing reception coverage including processing telephone calls,?...</
 <p><span class="badge badge-light">Sunnyvale California</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://caterwings.join.com/jobs/256329-intern-online-marketing-m-f-berlin-topcater-rocket-internet'>Job @ CaterWings (Berlin): Intern Online Marketing... | JOIN</a></h5> 
+<h5><a href='https://caterwings.join.com/jobs/256329-intern-online-marketing-m-f-berlin-topcater-rocket-internet'>Job @ CaterWings (Berlin): Intern Online Marketing... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... CaterWings has a job opening for Intern Online Marketing (m/f) Berlin - Topcater (
 Rocket Internet) in Berlin (published: 19.03.2019). Apply now or check the?...</p>
@@ -427,7 +433,7 @@ Rocket Internet) in Berlin (published: 19.03.2019). Apply now or check the?...</
 <p><span class="badge badge-light">Singapore Malaysia Philippines Hong Kong Taiwan</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://zalora.applytojob.com/apply/be9JwBaTkS/Digital-Imaging-Intern'>Digital Imaging Intern - ZALORA SEA - Career Page</a></h5> 
+<h5><a href='http://zalora.applytojob.com/apply/be9JwBaTkS/Digital-Imaging-Intern'>Digital Imaging Intern - ZALORA SEA - Career Page</a></h5> 
 <p><span class="badge badge-light">Singapore Malaysia Philippines Hong Kong Taiwan</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -472,10 +478,6 @@ Rocket Internet) in Berlin (published: 19.03.2019). Apply now or check the?...</
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qWGaVfwr&k=Job&j=omjn9fwV&__jvst=Employee+Referral&__jvsd=soNIKhwp&__jvsc=Twitter&bid=nR7WUKw3'>Selina Careers - Hospitality Operations (Internship Opportunity)</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-07-26</p>
 <hr/>
 
 
