Data Scientist - Momentum Solar - Career Page. Spry Squared, Inc. Data Scientist Manager | SmartRecruiters. Fanatics - Senior Data Scientist. Fanatics - Senior Data Scientist - Demand Forecasting / Supply Chain Science. Fanatics - Lead Data Scientist - Demand Forecasting / Supply Chain Science. Fanatics - Senior Data Scientist. Adam Kay Group Data Scientist | SmartRecruiters. Enterprise Account Exec- Data Science / ML -Paris - h2o.ai - Career Page. Enterprise Account Exec- Data Science / ML -London - h2o.ai - Career Page. Sr. Enterprise Account Exec- Data Science / ML -Munich - h2o.ai - Career Page. Sr. Enterprise Account Exec- Data Science / ML -Sydney - h2o.ai - Career Page. Sr. Enterprise Account Exec- Data Science / ML -Toronto - h2o.ai - Career Page. Customer Data Scientist / Solution Architect (US/Paris/Munich) - h2o.ai - Career Page. Sr. Enterprise Account Exec- Data Science / ML -Mid Atlantic (MA, DC, VA, PA) - h2o.ai - Career Page. Job @ talpasolutions (Essen): Data Scientist | JOIN. Data Scientist/ Python and R Programmer Consultant - Inter .... Bird Careers - Director, Data Science. Bird Careers - Manager, Data Scientist. Mention - Jobs: Senior Data Scientist - Apply online. Lead Data Scientist - Apply ... - Hummingbird Technologies Ltd - Jobs. IBI Group Data Analyst/ Data Scientist (Corporate Systems) | SmartRecruiters. Sia Partners Consultant(e) Data Science | SmartRecruiters. UNC Greensboro Employment Opportunities | Data Scientist. Job Application for Data Science - Internship/Working Student (m/f) at Wayfair. Bill.com - Lead Data Scientist. Job Application for Nubank - Data Scientist at Nubank. Job Application for Senior Data Scientist at GSW Sports, LLC. Job @ Westphalia DataLab  (Münster): Data Science ... | JOIN. Skupos - Senior Data Scientist. Senior Data Scientist. CaseWare - Jobs: Data Scientist x2 - Apply online. SmartNews, Inc. - Jobs: Data Science Manager - Apply online. Job Application for Senior Data Scientist at Mozilla. Job Application f

--- a/data-science.html
+++ b/data-science.html
@@ -85,7 +85,7 @@
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://h2oai.applytojob.com/apply/Y4bUDCcNNV/Sr-Enterprise-Account-Exec-Data-Science-ML-Sydney'>Sr. Enterprise Account Exec- Data Science / ML -Sydney - h2o.ai - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://h2oai.applytojob.com/apply/Y4bUDCcNNV/Sr-Enterprise-Account-Exec-Data-Science-ML-Sydney'>Sr. Enterprise Account Exec- Data Science / ML -Sydney - h2o.ai - Career Page</a></h5> 
 <p><span class="badge badge-light">Sydney</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -166,7 +166,7 @@ have?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/skupos/02c66a59-0c37-4494-99e3-596857d6924a'>Skupos - Senior Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/skupos/02c66a59-0c37-4494-99e3-596857d6924a'>Skupos - Senior Data Scientist</a></h5> 
 <p><span class="badge badge-light">Denver San Francisco</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -179,7 +179,7 @@ have?...</p>
 <p><span class="badge badge-light">Toronto, Ontario, Canada Toronto</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://smartnews.workable.com/j/37270B89CA'>SmartNews, Inc. - Jobs: Data Science Manager - Apply online</a></h5> 
+<h5><a href='https://smartnews.workable.com/j/37270B89CA'>SmartNews, Inc. - Jobs: Data Science Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">Tokyo, Japan Tokyo</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -207,7 +207,7 @@ have?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://anthem.referrals.selectminds.com/jobs/ai-principal-data-scientist-ps14902-38836'>AI Principal Data Scientist - PS14902 - Anthem, Inc. Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://anthem.referrals.selectminds.com/jobs/ai-principal-data-scientist-ps14902-38836'>AI Principal Data Scientist - PS14902 - Anthem, Inc. Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -277,7 +277,7 @@ Scientist ? Assistant Director drives forward the Business Value Creation...</p>
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://workable.com/j/06CA849781'>CACI Ltd - Jobs: Data Scientist - Apply online</a></h5> 
+<h5><a href='https://workable.com/j/06CA849781'>CACI Ltd - Jobs: Data Scientist - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... Apply online for the job of Data Scientist at CACI Ltd.</p>
 <hr/>
@@ -290,7 +290,7 @@ Scientist ? Assistant Director drives forward the Business Value Creation...</p>
 <p>Jul 17, 2019 ... Crisis Text Line is looking for a Data Scientist with experience in Behavioral 
 Science (?Behavioral Data Scientist?) to support our three core operational?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/crossover-health/job/o8Cuafw8'>Crossover Health Careers - Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/crossover-health/job/o8Cuafw8'>Crossover Health Careers - Data Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -411,7 +411,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/thehavasgroup/job/oZ6P9fwN'>The Havas Group Careers - Data Science Director - Media</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/thehavasgroup/job/oZ6P9fwN'>The Havas Group Careers - Data Science Director - Media</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -431,7 +431,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">London, England, United Kingdom London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://datatonic.workable.com/j/4F23F92AEA'>Datatonic - Jobs: Data Scientist - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://datatonic.workable.com/j/4F23F92AEA'>Datatonic - Jobs: Data Scientist - Apply online</a></h5> 
 <p><span class="badge badge-light">Munich Munich London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -439,7 +439,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Stockholm Stockholm Stockholm London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/8451/jobs/4368755002'>Job Application for Lead Data Scientist at 84.51? </a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/8451/jobs/4368755002'>Job Application for Lead Data Scientist at 84.51? </a></h5> 
 <p><span class="badge badge-light">Cincinnati, OH</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -463,7 +463,7 @@ and artificial intelligence advances? In an increasingly connected world, massiv
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://motiion.recruiterbox.com/jobs/fk0jolc/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://motiion.recruiterbox.com/jobs/fk0jolc/'>
     Data Scientist - [Remote] - [Europe] at Motiion Inc.
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -477,7 +477,7 @@ and artificial intelligence advances? In an increasingly connected world, massiv
 <p><span class="badge badge-light">Columbus, OH, USA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://westernun.referrals.selectminds.com/jobs/junior-data-scientist-19557'>Junior Data Scientist - Western Union Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://westernun.referrals.selectminds.com/jobs/junior-data-scientist-19557'>Junior Data Scientist - Western Union Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Thanks for your interest in the Junior Data Scientist position. Unfortunately this 
 position has been closed but you can search our 172 open jobs by clicking here.</p>
