--- a/data-engineer.html
+++ b/data-engineer.html
@@ -64,17 +64,17 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://profacebook.applytojob.com/apply/Hm84NOXEWB/Data-Engineer-9359888'>Data Engineer (9359888) - PRO Unlimited @ Facebook - Career Page</a></h5> 
+<h5><a href='http://profacebook.applytojob.com/apply/Hm84NOXEWB/Data-Engineer-9359888'>Data Engineer (9359888) - PRO Unlimited @ Facebook - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://bounceshare.freshteam.com/jobs/AgywffgwPefc/data-engineer'>Data Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bounceshare.freshteam.com/jobs/AgywffgwPefc/data-engineer'>Data Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Data Engineer. Bengaluru, Karnataka | Full time. Apply Now. Roles & 
 Responsibilities. - Create and maintain optimal data pipeline architecture - 
 Assemble large?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cloudacademy.workable.com/jobs/1085422'>Cloud Academy - Jobs: Data Engineer - Apply online</a></h5> 
+<h5><a href='https://cloudacademy.workable.com/jobs/1085422'>Cloud Academy - Jobs: Data Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Data Engineer at Cloud Academy.</p>
 <hr/>
@@ -98,7 +98,7 @@ Assemble large?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SteppingUpSolutions/89500696-lead-data-engineer'>Stepping Up Solutions  Lead Data Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/SteppingUpSolutions/89500696-lead-data-engineer'>Stepping Up Solutions  Lead Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -156,7 +156,7 @@ enterprise systems; Architect and implement large financial data warehouse,?...<
 Consistently evolve data model & data schema based on business and 
 engineering needs?...</p>
 <hr/>
-<h5><a href='https://bah.wd1.myworkdayjobs.com/en-US/BAH_Jobs/job/USA-VA-Herndon-575-Herndon-Pkwy/Data-Engineer--Mid_R0063050'>Data Engineer, Mid</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bah.wd1.myworkdayjobs.com/en-US/BAH_Jobs/job/USA-VA-Herndon-575-Herndon-Pkwy/Data-Engineer--Mid_R0063050'>Data Engineer, Mid</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Data Engineer, Mid. Key Role: Perform data engineering activities on some of the 
 coolest and most cutting-edge projects in the industry, working with Big Data?...</p>
@@ -233,7 +233,7 @@ created Data Management Excellence Team. Within this multidisciplinary team?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/DenodoTechnologies/743999692220623-data-engineer-sql-big-data-cloud'>Denodo Technologies Data Engineer - SQL / Big Data / Cloud | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DenodoTechnologies/743999692220623-data-engineer-sql-big-data-cloud'>Denodo Technologies Data Engineer - SQL / Big Data / Cloud | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -336,7 +336,7 @@ Engineer for managing the CMDB (Configuration Management Database)?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/linuxacademy/9b3b415d-d6ee-4e4c-b32b-48192095da3a'>Linux Academy - Data Engineer (Remote)</a></h5> 
+<h5><a href='https://jobs.lever.co/linuxacademy/9b3b415d-d6ee-4e4c-b32b-48192095da3a'>Linux Academy - Data Engineer (Remote)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
